push local code to master

--- a/.github/workflows/bat.yml
+++ b/.github/workflows/bat.yml
@@ -35,64 +35,48 @@ jobs:
           IFS=',' read -ra RALLY_TEST_SET_IDS_ARRAY <<< "$(echo -n "${{ inputs.rallyTestSetIds }}" | tr -d '[:space:]')"
           
           # Validate array lengths
-          if [ ! -z "$RALLY_TEST_SET_IDS_ARRAY" ] && [ ${#RALLY_TEST_SET_IDS_ARRAY[@]} -ne ${#PORTAL_ARRAY[@]} ]; then
+          if [ ${#rallyTestSetIdsArray[@]} -ne ${#portalArray[@]} ]; then
             echo "Error: The number of PORTAL_ARRAY does not match the number of RALLY_TEST_SET_IDS_ARRAY."
             exit 1
           fi
           
           # Initialize matrix and map
-          matrix="["
-          declare -A PORTAL_TO_RALLY_TEST_SET_MAP
+          matrix=()
+          declare -A portalToRallyTestSetMap
           
-          # Construct the matrix and map
-          for i in "${!PORTAL_ARRAY[@]}"; do
-            suites=$(yq e ".suites" "scripts/portals/${PORTAL_ARRAY[i]}.yml" | sed 's/^- //; s/^/'\''/; s/$/'\''/' | paste -sd, - | sed "s/'//g" | sed 's/^/ /; s/$/ /')
-            IFS=',' read -ra SUITE_ARRAY <<< "$(echo -n "$suites" | tr -d '[:space:]')"
-              for suite in "${SUITE_ARRAY[@]}"; do
-              matrix+="{\"portalName\": \"${PORTAL_ARRAY[i]}\", \"suiteName\": \"${suite}\"},"
-            done
-            PORTAL_TO_RALLY_TEST_SET_MAP["${PORTAL_ARRAY[i]}"]="${RALLY_TEST_SET_IDS_ARRAY[i]}"
+          # Read suites from YAML files and construct matrix and map
+          for i in "${!portalArray[@]}"; do
+            portalName="${portalArray[$i]}"
+            rallyTestSetId="${rallyTestSetIdsArray[$i]}"
+            suiteList=$(yq e '.suites[]' "portals/${portalName}.yml")
+            
+            while IFS= read -r suite; do
+              entry="{\\\"portalName\\\":\\\"$portalName\\\", \\\"suiteName\\\":\\\"$suite\\\"}"
+              matrix+=("$entry")
+            done <<< "$suiteList"
+          
+            portalToRallyTestSetMap["$portalName"]="$rallyTestSetId"
           done
           
-          # Finalize the matrix string
-          matrix=${matrix::-1}
-          matrix+="]"
+          # Split matrix into chunks of 100 values each
+          chunkSize=100
+          numChunks=$(( (${#matrix[@]} + chunkSize - 1) / chunkSize ))
+          chunksArray=()
           
-          # Construct the portal to rally test set map string
-          portal_to_rally="{"
-          for portal in "${!PORTAL_TO_RALLY_TEST_SET_MAP[@]}"; do
-            portal_to_rally+="\"$portal\":\"${PORTAL_TO_RALLY_TEST_SET_MAP[$portal]}\","
-          done
-          portal_to_rally=${portal_to_rally::-1}
-          portal_to_rally+="}"
-          
-          # Split matrix into smaller chunks of 100 values each
-          matrix_array=($(echo $matrix | jq -c '.[]'))
-          num_chunks=$(((${#matrix_array[@]} + 99) / 100))  # Adjusted for 100 values per chunk
-          chunks_array="["
-          
-          for i in $(seq 0 $((num_chunks - 1))); do
-            chunk=$(echo ${matrix_array[@]:$((i * 100)):100} | jq -s '.')
-            chunk_string=$(echo $chunk)
-            chunks_array+="$chunk_string,"
+          for (( i=0; i<numChunks; i++ )); do
+            chunk=("${matrix[@]:i*chunkSize:chunkSize}")
+            chunksArray+=("\"$(IFS=,; echo "${chunk[*]}")\"")
           done
           
-          # Finalize the chunks array string
-          chunks_array=${chunks_array::-1}
-          chunks_array+="]"
-          
-          # Output the matrix
-          echo "matrix=${matrix}"
-          
-          # Output the portal to rally map, and chunks array
-          echo "portal_to_rally=${portal_to_rally}" >> $GITHUB_OUTPUT
-          echo "chunks_array=${chunks_array}" >> $GITHUB_OUTPUT
+          # Output results to files
+          echo "portal_to_rally=${portalToRallyTestSetMap[@]}" >> $GITHUB_OUTPUT
+          echo "chunks_array=${chunksArray[@]}" >> $GITHUB_OUTPUT
 
   test:
     needs: metadata
     strategy:
       matrix:
-        tests: ${{fromJson(needs.metadata.outputs.chunks_array)}}
+        tests: ${{needs.metadata.outputs.chunks_array}}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
