--- a/.github/workflows/bat.yml
+++ b/.github/workflows/bat.yml
@@ -77,16 +77,19 @@ jobs:
     strategy:
       matrix:
         tests: ${{needs.metadata.outputs.chunks_array}}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: print matrix
-        run: |
-          echo ${{ matrix.tests }}
-
-      - name: Run Integration Test
-        uses: ./.github/workflows/integration-Bat.yml
-        with:
-          chunk: ${{ matrix.tests }}
+    uses: ./.github/workflows/integration-Bat.yml
+    with:
+      chunk: ${{ matrix.tests }}
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout repository
+#        uses: actions/checkout@v4
+#
+#      - name: print matrix
+#        run: |
+#          echo ${{ matrix.tests }}
+#
+#      - name: Run Integration Test
+#        uses: ./.github/workflows/integration-Bat.yml
+#        with:
+#          chunk: ${{ matrix.tests }}
