push local code to master

--- a/.github/workflows/bat.yml
+++ b/.github/workflows/bat.yml
@@ -77,7 +77,7 @@ jobs:
           rallyTestSetIdsArrayString=$(IFS=,; echo "${rallyTestSetIdsArray[*]}")
           matrixString=$(IFS=,; echo "${matrix[*]}")
           chunksArrayString=$(printf '%s\n' "${chunksArray[@]}" | jq -s .)
-          portalToRallyTestSetMapString=$(printf '%s\n' $(for key in "${!portalToRallyTestSetMap[@]}"; do echo "{\"$key\":\"${portalToRallyTestSetMap[$key]}\"}"; done) | jq -s add)
+          portalToRallyTestSetMapString=$(for key in "${!portalToRallyTestSetMap[@]}"; do echo "\"$key\":\"${portalToRallyTestSetMap[$key]}\""; done | jq -s add)
           
           # Output results
           echo "portalArrayString=$portalArrayString"
@@ -87,10 +87,8 @@ jobs:
           echo "portalToRallyTestSetMapString=$portalToRallyTestSetMapString"
           
           # Output results to files
-          chunks_array=$(echo "$chunksArrayString")
-          portalToRallyTestSetMapString=$(echo "$portalToRallyTestSetMapString")
-          echo "chunks_array=$chunks_array" >> $GITHUB_OUTPUT
-          echo "portal_to_rally=$portalToRallyTestSetMapString" >> $GITHUB_OUTPUT
+          echo "chunks_array=${chunksArrayString}" >> $GITHUB_OUTPUT
+          echo "portal_to_rally=${portalToRallyTestSetMapString}" >> $GITHUB_OUTPUT
 
   test:
     needs: metadata
