--- a/.github/workflows/bat.yml
+++ b/.github/workflows/bat.yml
@@ -91,13 +91,18 @@ jobs:
   test:
     needs: metadata
     strategy:
+      fail-fast: false
+      max-parallel: 2
       matrix:
         tests: ${{fromJson(needs.metadata.outputs.chunks_array)}}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Run Integration Test
-        run: |
-          echo "Running integration test for chunk ${{ matrix.tests }} "
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v4
+#
+#      - name: Run Integration Test
+#        run: |
+#          echo "Running integration test for chunk ${{ matrix.tests }} "
+    uses: ./.github/workflows/integration-Bat.yml
+    with:
+      chunk: ${{ matrix.tests }}
