--- a/.github/workflows/tagsTest.yml
+++ b/.github/workflows/tagsTest.yml
@@ -32,6 +32,13 @@ jobs:
           while [ ${#tags[@]} -gt 5 ]; do
             oldest_tag=${tags[0]}
             git tag -d $oldest_tag
-            git push origin :$oldest_tag
+            git push origin --delete :$oldest_tag
+            echo "Deleted oldest tag: $oldest_tag"
             tags=("${tags[@]:1}")
           done
+          
+          if [ ${#tags[@]} -gt 5 ]; then
+            oldest_tag=${tags[0]}
+            git tag -d $oldest_tag
+            git push origin --delete $oldest_tag
+          fi
