--- a/.github/workflows/tagsTest.yml
+++ b/.github/workflows/tagsTest.yml
@@ -36,9 +36,9 @@ jobs:
             echo "Deleted oldest tag: $oldest_tag"
             tags=("${tags[@]:1}")
           done
-          
-          if [ ${#tags[@]} -gt 5 ]; then
-            oldest_tag=${tags[0]}
-            git tag -d $oldest_tag
-            git push origin --delete $oldest_tag
-          fi
+#
+#          if [ ${#tags[@]} -gt 5 ]; then
+#            oldest_tag=${tags[0]}
+#            git tag -d $oldest_tag
+#            git push origin --delete $oldest_tag
+#          fi
