--- a/.github/workflows/tagsTest.yml
+++ b/.github/workflows/tagsTest.yml
@@ -30,7 +30,7 @@ jobs:
             while [ ${#tags_array[@]} -gt 5 ]; do
               oldest_tag=${tags_array[0]}
               git tag -d $oldest_tag
-              git push origin --delete :$oldest_tag
+              git push origin :refs/tags/$oldest_tag
               echo "Deleted oldest tag: $oldest_tag"
               tags_array=("${tags_array[@]:1}")
             done
